JSTests/stress/temporal-timezone.js
@@ -1,6 +1,4 @@
 //@ requireOptions("--useTemporal=1")
-// FIXME: toLocaleString requires IntlDateTimeFormat Temporal support, implemented in the next patch.
-//@ skip
 
 function shouldBe(actual, expected) {
     if (actual !== expected)
@@ -23,26 +21,26 @@ function shouldThrow(func, errorType) {
 shouldThrow(() => { new Temporal.TimeZone("UTC"); }, TypeError);
 shouldThrow(() => { Temporal.TimeZone.from("UTC"); }, TypeError);
 
-// FIXME: TimeZone is accessed via timeZoneId on ZonedDateTime
-// {
-//     let zdt = Temporal.ZonedDateTime.from("2024-06-15T12:00[Asia/Tokyo]");
-//     shouldBe(zdt.timeZoneId, "Asia/Tokyo");
-//     shouldBe(zdt.offset, "+09:00");
-// }
+// TimeZone is accessed via timeZoneId on ZonedDateTime
+{
+    let zdt = Temporal.ZonedDateTime.from("2024-06-15T12:00[Asia/Tokyo]");
+    shouldBe(zdt.timeZoneId, "Asia/Tokyo");
+    shouldBe(zdt.offset, "+09:00");
+}
 
-// FIXME: UTC, fixed offset, ZonedDateTime
-// {
-//     let zdt = Temporal.ZonedDateTime.from("2024-06-15T12:00[UTC]");
-//     shouldBe(zdt.timeZoneId, "UTC");
-//     shouldBe(zdt.offset, "+00:00");
-// }
+// UTC, fixed offset, ZonedDateTime
+{
+    let zdt = Temporal.ZonedDateTime.from("2024-06-15T12:00[UTC]");
+    shouldBe(zdt.timeZoneId, "UTC");
+    shouldBe(zdt.offset, "+00:00");
+}
 
-// FIXME: Fixed UTC offset ZonedDateTime
-// {
-//     let zdt = new Temporal.ZonedDateTime(0n, "+05:30");
-//     shouldBe(zdt.timeZoneId, "+05:30");
-//     shouldBe(zdt.offset, "+05:30");
-// }
+// Fixed UTC offset ZonedDateTime
+{
+    let zdt = new Temporal.ZonedDateTime(0n, "+05:30");
+    shouldBe(zdt.timeZoneId, "+05:30");
+    shouldBe(zdt.offset, "+05:30");
+}
 
 // Temporal.Now.timeZoneId returns a string
 {
